# app/Http/Controllers/BookingController.php
@@ -147,4 +147,15 @@ class BookingController extends Controller
 
         return response()->json(['message' => 'Object has been booked'], 200);
     }
+
+    public function getBookingsByObjectId ($objectId)
+    {
+        $bookings = Booking::where('object_id', $objectId)->get();
+
+        if ($bookings->isEmpty()) {
+            return response()->json(['message' => 'No bookings found'], 404);
+        }
+
+        return response()->json(['bookings' => $bookings], 200);
+    }
 }
